<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
     >

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_user_profile"
        android:icon="@drawable/ic_person_outline_white_24dp"
        android:title="@string/title_user" />


    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_gamepad_white_24dp"
        android:title="@string/title_quiz" />

    <item
        android:id="@+id/navigation_debts"
        android:icon="@drawable/ic_people_white_24dp"
        android:title="@string/title_debts" />

    <!--<item-->
        <!--android:id="@+id/navigation_plans"-->
        <!--android:icon="@drawable/ic_access_alarms_white_24dp"-->
        <!--android:title="@string/title_plans" />-->

</menu>
