<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/default_margin"
    tools:showIn="@layout/fragment_candidate">

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/titleStyle"
        android:text="@string/prompt_candidate_name"
        android:textColor="@color/primaryTextColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/titleStyle"
        android:text="@string/prompt_candidate_team"
        android:textColor="@color/primaryTextColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/descriptionStyle"
        android:text="@string/prompt_candidate_number"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/descriptionStyle"
        android:text="@string/prompt_candidate_similarity"
        android:textColor="@color/primaryTextColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/descriptionStyle"
        android:text="@string/prompt_candidate_situation"
        android:textColor="@color/primaryTextColor" />

</LinearLayout>