<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/titleStyle"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="@dimen/huge_text_size"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/descriptionStyle"
        android:layout_gravity="center_horizontal"
        android:text="@string/dummy_app_version"
        android:textStyle="bold" />

    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_margin="@dimen/default_margin"
        android:layout_gravity="center"
        android:src="@drawable/ic_android_white_48dp">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/descriptionStyle"
        android:layout_gravity="center_horizontal"
        android:text="@string/dummy_inc"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/descriptionStyle"
        android:layout_gravity="center_horizontal"
        android:text="@string/dummy_copyrights"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        style="@style/descriptionStyle"
        android:layout_gravity="center_horizontal"
        android:text="@string/prompt_licenses"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:autoLink="all"
        />

</LinearLayout>
