<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/tiny_margin"
    android:padding="0dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/normalTextStyle"
        android:layout_marginLeft="@dimen/default_margin"
        android:text="@string/prompt_faq"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"/>

    <include layout="@layout/layout_horizontal_divider"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normalTextStyle"
            android:layout_marginLeft="@dimen/default_margin"
            android:text="@string/prompt_app_info"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"/>

        <TextView
            style="@style/normalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:scaleType="fitEnd"
            android:text="@string/prompt_app_version"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_marginRight="@dimen/default_margin"/>

    </LinearLayout>

    <include layout="@layout/layout_horizontal_divider"></include>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/normalTextStyle"
        android:layout_marginLeft="@dimen/default_margin"
        android:text="@string/prompt_contact_us"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"/>

    <include layout="@layout/layout_horizontal_divider"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/normalTextStyle"
        android:layout_marginLeft="@dimen/default_margin"
        android:text="@string/prompt_terms_conditions"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"/>
    <include layout="@layout/layout_horizontal_divider"></include>

</LinearLayout>