<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_margin"
    tools:showIn="@layout/fragment_place_overview"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        style="@style/titleStyle"
        android:text="@string/dummy_place_section_name"
        android:textColor="@color/primaryTextColor"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin">
        <TextView
            android:layout_width="300dp"
            android:layout_height="match_parent"
            style="@style/descriptionStyle"
            android:text="@string/dummy_description"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_android_white_48dp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        style="@style/infoWarnTextStyle"
        android:text="@string/dummy_place_match_time"/>




</LinearLayout>