<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryColor"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primaryColor">

        <include layout="@layout/layout_app_name" />

        <include layout="@layout/layout_email" />

        <include layout="@layout/layout_password" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/default_margin">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SwitchCompatStyle"
                    android:id="@+id/reminder" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/smallTextStyle"
                    android:text="Manter conectado" />
            </LinearLayout>
        <TextView
            android:id="@+id/forgotPassword"
            style="@style/smallTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:text="@string/prompt_forgot_password"
            android:textAlignment="textEnd"
            android:autoLink="all"
            android:textColorLink="@color/white"
            />
        </LinearLayout>


        <Button
            android:id="@+id/email_sign_in_button"
            style="@style/button"
            android:text="@string/action_sign_in" />

        <TextView
            style="@style/normalTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="Ou"
            android:textAlignment="center"
            android:autoLink="all"
            android:textColorLink="@color/white"
            />

        <Button
            style="@style/button"
            android:text="@string/action_facebook_login"
            android:drawableLeft="@drawable/logo_facebook"
            android:background="@color/facebook_blue"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <Button
            style="@style/button"
            android:text="@string/google_login_Text"
            android:drawableLeft="@drawable/logo_google"
            android:textColor="@color/black"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            />

        <!--<com.facebook.login.widget.LoginButton-->
            <!--android:id="@+id/login_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_margin="@dimen/tiny_margin"-->
            <!--android:paddingTop="10dp"-->
            <!--android:paddingBottom="10dp"-->
            <!--android:textSize="@dimen/default_text_size"-->
            <!--facebook:com_facebook_login_text="Facebook"-->
            <!--facebook:com_facebook_logout_text="Facebook" />-->

        <!--<com.google.android.gms.common.SignInButton-->
            <!--android:id="@+id/signin"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:text="@string/google_login_Text"-->
            <!--android:textSize="@dimen/default_text_size"-->
            <!--android:layout_margin="@dimen/tiny_margin"-->
            <!--/>-->


    </LinearLayout>


</LinearLayout>
